- Make all anchors use the shifted class which makes the anchor open not right at the top   of the page but a little lower.  This leaves room for the header which runs across the   top of the page.

--- a/MacHgHelp/MacHgHelp.html
+++ b/MacHgHelp/MacHgHelp.html
@@ -16,7 +16,7 @@
 <!--top navigation area-->
 
 <div id="navbox" class="gradient">
-   <a name="access"></a>
+   <a name="access" class="shifted"> </a>
 
    <div id="navrightbox"><a class="navlink_right" href="help:anchor='xall' bookID=MacHg Help">Index</a></div>
 </div>
