--- a/MacHgHelp/pgs/AboutMacHg.html
+++ b/MacHgHelp/pgs/AboutMacHg.html
@@ -22,7 +22,7 @@
 <body id="apple-pd">
 <!--top navigation area-->
 
-<div id="navbox" class="gradient"> <a name="AboutMacHg"></a>
+<div id="navbox" class="gradient"> <a name="AboutMacHg" class="shifted"> </a>
 
    <div id="navleftbox"> <a class="navlink_left" href="help:anchor='access' bookID=MacHg Help">Home</a> </div>
 
