--- a/MacHgHelp/pgs/RepositoryMenu.html
+++ b/MacHgHelp/pgs/RepositoryMenu.html
@@ -24,7 +24,7 @@
 <body id="apple-pd">
 <!--top navigation area-->
 
-<div id="navbox" class="gradient"> <a name="RepositoryMenu"></a>
+<div id="navbox" class="gradient"> <a name="RepositoryMenu" class="shifted"> </a>
 
    <div id="navleftbox"> <a class="navlink_left" href="help:anchor='access' bookID=MacHg Help">Home</a> </div>
 
@@ -56,7 +56,7 @@
       <div class="two-col-description-header-right"> Operation </div>
    </div>
    
-   <a name="RepositoryMenu_clone"></a>
+   <a name="RepositoryMenu_clone" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Clone...</p>
@@ -70,7 +70,7 @@
       </div>
    </div>
    
-   <a name="RepositoryMenu_pull"></a>
+   <a name="RepositoryMenu_pull" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Pull from...</p>
@@ -84,7 +84,7 @@
       </div>
    </div>
    
-   <a name="RepositoryMenu_push"></a>
+   <a name="RepositoryMenu_push" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Push to...</p>
@@ -99,7 +99,7 @@
    </div>
    
    
-   <a name="RepositoryMenu_incoming"></a>
+   <a name="RepositoryMenu_incoming" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Incoming...</p>
@@ -114,7 +114,7 @@
  
  
  
-   <a name="RepositoryMenu_outgoing"></a>
+   <a name="RepositoryMenu_outgoing" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Outgoing...</p>
@@ -140,7 +140,7 @@
    </div>
 
 
-   <a name="RepositoryMenu_update"></a>
+   <a name="RepositoryMenu_update" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Update Repository</p>
@@ -166,7 +166,7 @@
    </div>
 
 
-   <a name="RepositoryMenu_merge"></a>
+   <a name="RepositoryMenu_merge" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Merge</p>
@@ -192,7 +192,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
  
-   <a name="RepositoryMenu_collapse"></a>
+   <a name="RepositoryMenu_collapse" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Collapse Changesets...</p>
@@ -206,7 +206,7 @@
    </div>
 
 
-   <a name="RepositoryMenu_histedit"></a>
+   <a name="RepositoryMenu_histedit" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Edit Changesets...</p>
@@ -221,7 +221,7 @@
 
 
 
-   <a name="RepositoryMenu_strip"></a>
+   <a name="RepositoryMenu_strip" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Strip Changesets...</p>
@@ -236,7 +236,7 @@
 
 
 
-   <a name="RepositoryMenu_rebase"></a>
+   <a name="RepositoryMenu_rebase" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Rebase Changesets...</p>
@@ -251,7 +251,7 @@
 
 
 
-   <a name="RepositoryMenu_backout"></a>
+   <a name="RepositoryMenu_backout" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Backout Changeset...</p>
@@ -278,7 +278,7 @@
    </div>
 
 
-   <a name="RepositoryMenu_manifest"></a>
+   <a name="RepositoryMenu_manifest" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Manifest</p>
@@ -292,7 +292,7 @@
    </div>
 
 
-   <a name="RepositoryMenu_label"></a>
+   <a name="RepositoryMenu_label" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Add Revision Label...</p>
@@ -316,7 +316,7 @@
       <div class="two-col-description-header-left"> Menu Item </div>
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
-   <a name="RepositoryMenu_addlocalrepository"></a>
+   <a name="RepositoryMenu_addlocalrepository" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Add Local Repository...</p>
@@ -329,7 +329,7 @@
       </div>
    </div>
 
-   <a name="RepositoryMenu_addserverrepository"></a>
+   <a name="RepositoryMenu_addserverrepository" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Add Server Repository</p>
@@ -342,7 +342,7 @@
       </div>
    </div>
 
-   <a name="RepositoryMenu_addrepositorygroup"></a>
+   <a name="RepositoryMenu_addrepositorygroup" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Add New Repository Group</p>
@@ -355,7 +355,7 @@
       </div>
    </div>
 
-   <a name="RepositoryMenu_removerepositoryitem"></a>
+   <a name="RepositoryMenu_removerepositoryitem" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Remove Repository Item</p>
@@ -368,7 +368,7 @@
       </div>
    </div>
 
-   <a name="RepositoryMenu_configurerepository"></a>
+   <a name="RepositoryMenu_configurerepository" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Configure Selected Repository...</p>
