--- a/MacHgHelp/pgs/ActionMenu.html
+++ b/MacHgHelp/pgs/ActionMenu.html
@@ -24,7 +24,7 @@
 <body id="apple-pd">
 <!--top navigation area-->
 
-<div id="navbox" class="gradient"> <a name="ActionMenu"></a>
+<div id="navbox" class="gradient"> <a name="ActionMenu" class="shifted"> </a>
 
    <div id="navleftbox"> <a class="navlink_left" href="help:anchor='access' bookID=MacHg Help">Home</a> </div>
 
@@ -56,7 +56,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
-   <a name="ActionMenu_CommitSelectedFiles"></a>
+   <a name="ActionMenu_CommitSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Commit Selected Files...</p>
@@ -69,7 +69,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_DiffSelectedFiles"></a>
+   <a name="ActionMenu_DiffSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Diff Selected Files</p>
@@ -82,7 +82,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_AddRemoveSelectedFiles"></a>
+   <a name="ActionMenu_AddRemoveSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>AddRemove Selected Files</p>
@@ -108,7 +108,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
-   <a name="ActionMenu_RevertSelectedFiles"></a>
+   <a name="ActionMenu_RevertSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Revert Selected Files</p>
@@ -121,7 +121,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_RevertSelectedFilesToVersion"></a>
+   <a name="ActionMenu_RevertSelectedFilesToVersion" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Revert Selected Files to Version...</p>
@@ -134,7 +134,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_DeleteSelectedFiles"></a>
+   <a name="ActionMenu_DeleteSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Delete Selected Files</p>
@@ -146,7 +146,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_AddSelectedFiles"></a>
+   <a name="ActionMenu_AddSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Add Selected Files</p>
@@ -160,7 +160,7 @@
    </div>
 
 
-   <a name="ActionMenu_UntrackSelectedFiles"></a>
+   <a name="ActionMenu_UntrackSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Untrack Selected Files</p>
@@ -172,7 +172,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_RenameSelectedFiles"></a>
+   <a name="ActionMenu_RenameSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Rename Selected File...</p>
@@ -197,7 +197,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
-   <a name="ActionMenu_RemergeSelectedFiles"></a>
+   <a name="ActionMenu_RemergeSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Remerge Selected Files</p>
@@ -210,7 +210,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_MarkResolvedSelectedFiles"></a>
+   <a name="ActionMenu_MarkResolvedSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Mark Resolved Selected Files</p>
@@ -235,7 +235,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
-   <a name="ActionMenu_CommitAllFiles"></a>
+   <a name="ActionMenu_CommitAllFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Commit All Files...</p>
@@ -248,7 +248,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_DiffAllFiles"></a>
+   <a name="ActionMenu_DiffAllFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Diff All Files</p>
@@ -274,7 +274,7 @@
       <div class=" two-col-description-header-right"> Operation </div>
    </div>
 
-   <a name="ActionMenu_IgnoreSelectedFiles"></a>
+   <a name="ActionMenu_IgnoreSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Ignore Selected Files</p>
@@ -287,7 +287,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_UnIgnoreSelectedFiles"></a>
+   <a name="ActionMenu_UnIgnoreSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>UnIgnore Selected Files</p>
@@ -300,7 +300,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_AnnotateSelectedFiles"></a>
+   <a name="ActionMenu_AnnotateSelectedFiles" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Annotate Selected Files</p>
@@ -312,7 +312,7 @@
       </div>
    </div>
 
-   <a name="ActionMenu_Rollback"></a>
+   <a name="ActionMenu_Rollback" class="shifted"> </a>
    <div class="two-col-description-item">
       <div class="two-col-description-item-left">
          <p>Rollback Last Commit</p>
