--- a/MacHgHelp/pgs/EditingRepositoryHistory.html
+++ b/MacHgHelp/pgs/EditingRepositoryHistory.html
@@ -24,7 +24,7 @@
 <body id="apple-pd">
 <!--top navigation area-->
 
-<div id="navbox" class="gradient"> <a name="EditingRepositoryHistory"></a>
+<div id="navbox" class="gradient"> <a name="EditingRepositoryHistory" class="shifted"> </a>
 
    <div id="navleftbox"> <a class="navlink_left" href="help:anchor='access' bookID=MacHg Help">Home</a> </div>
 
